--- a/index.html
+++ b/index.html
@@ -7,88 +7,114 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>WhatsApp Bot Manager</h1>
-            <p>Auto-connect & Real-time monitoring</p>
+    <!-- SPLASH LOADER -->
+    <div id="splash-loader">
+        <div class="splash-logo">
+            <svg viewBox="0 0 24 24" fill="currentColor">
+                <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893-.001-3.189-1.262-6.187-3.55-8.439"/>
+            </svg>
         </div>
+        <div class="splash-spinner"></div>
+        <div class="splash-text">WhatsApp Bot Manager</div>
+        <div class="splash-subtext">Loading...</div>
+    </div>
 
-        <div class="card">
-            <div class="section-title">
-                <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
-                    <path d="M17 1.01L7 1c-1.1 0-2 .9-2 2v18c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM17 19H7V5h10v14z"/>
-                </svg>
-                Connected Bots
+    <!-- MAIN CONTENT -->
+    <div id="main-content">
+        <div class="container">
+            <div class="header">
+                <h1>WhatsApp Bot Manager</h1>
+                <p>Auto-connect & Real-time monitoring</p>
             </div>
-            <div class="connected-bots">
-                <div id="bot-list" class="bot-list">
-                    <div class="empty-state">
-                        <svg class="empty-icon" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
-                        </svg>
-                        <h3>No Bots Connected</h3>
-                        <p>Setup your first WhatsApp bot using the form below</p>
+
+            <!-- Connected Bots Section -->
+            <div class="card">
+                <div class="section-title">
+                    <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M17 1.01L7 1c-1.1 0-2 .9-2 2v18c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM17 19H7V5h10v14z"/>
+                    </svg>
+                    Connected Bots
+                </div>
+                <div class="connected-bots">
+                    <div id="bot-list" class="bot-list">
+                        <div class="empty-state">
+                            <svg class="empty-icon" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+                            </svg>
+                            <h3>No Bots Connected</h3>
+                            <p>Setup your first WhatsApp bot using the form below</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="card">
-            <div class="section-title">
-                <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
-                    <path d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"/>
-                </svg>
-                Setup New Bot
-            </div>
-            <div class="input-group">
-                <label for="phone">WhatsApp Number</label>
-                <input type="tel" id="phone" placeholder="628123456789" pattern="[0-9]*" inputmode="numeric" required>
-            </div>
-            <div id="status">
-                <p style="color: #999; font-size: 14px;">Ready to connect</p>
-            </div>
-            <div class="auth-options">
-                <button class="auth-btn qr-btn" onclick="startAuth('qr')" id="qrBtn">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M3 11h8V3H3v8zm2-6h4v4H5V5zM3 21h8v-8H3v8zm2-6h4v4H5v-4zM13 3v8h8V3h-8zm6 6h-4V5h4v4z"/>
+            <!-- Setup New Bot Section -->
+            <div class="card">
+                <div class="section-title">
+                    <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"/>
                     </svg>
-                    QR Code
-                </button>
-                <button class="auth-btn pairing-btn" onclick="startAuth('pairing')" id="pairingBtn">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
-                    </svg>
-                    Pairing Code
-                </button>
+                    Setup New Bot
+                </div>
+                <div class="input-group">
+                    <label for="phone">WhatsApp Number</label>
+                    <input type="tel" id="phone" placeholder="628123456789" pattern="[0-9]*" inputmode="numeric" required>
+                </div>
+                <div id="status">
+                    <p style="color: #999; font-size: 14px;">Ready to connect</p>
+                </div>
+                <div class="auth-options">
+                    <button class="auth-btn qr-btn" onclick="startAuth('qr')" id="qrBtn">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M3 11h8V3H3v8zm2-6h4v4H5V5zM3 21h8v-8H3v8zm2-6h4v4H5v-4zM13 3v8h8V3h-8zm6 6h-4V5h4v4z"/>
+                        </svg>
+                        QR Code
+                    </button>
+                    <button class="auth-btn pairing-btn" onclick="startAuth('pairing')" id="pairingBtn">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+                        </svg>
+                        Pairing Code
+                    </button>
+                </div>
+                <div id="auth-area">
+                    <p style="color: #999; font-size: 14px;">Pilih metode autentikasi</p>
+                </div>
             </div>
-            <div id="auth-area">
-                <p style="color: #999; font-size: 14px;">Pilih metode autentikasi</p>
-            </div>
-        </div>
 
-        <div class="card storage-management">
-            <div class="section-title">
-                <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
-                    <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/>
-                </svg>
-                Storage Management
-            </div>
-            <div class="auth-options">
-                <button class="storage-btn" onclick="loadStorageSessions()">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+            <!-- Storage Management Section -->
+            <div class="card storage-management">
+                <div class="section-title">
+                    <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/>
                     </svg>
-                    View All
-                </button>
-                <button class="storage-btn danger-btn" onclick="stopAllBots()">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"/>
-                    </svg>
-                    Stop All
-                </button>
+                    Storage Management
+                </div>
+                <div class="auth-options">
+                    <button class="storage-btn" onclick="loadStorageSessions()">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+                        </svg>
+                        View All
+                    </button>
+                    <button class="storage-btn danger-btn" onclick="stopAllBots()">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"/>
+                        </svg>
+                        Stop All
+                    </button>
+                </div>
+                <div id="storage-info" style="margin-top: 10px; font-size: 12px; color: #666; text-align: center;">
+                    Auto-reconnect enabled
+                </div>
             </div>
-            <div id="storage-info" style="margin-top: 10px; font-size: 12px; color: #666; text-align: center;">
-                Auto-reconnect enabled
+
+            <!-- COPYRIGHT FOOTER -->
+            <div class="footer">
+                <div style="text-align: center; color: rgba(255,255,255,0.6); font-size: 12px; padding: 20px 0;">
+                    &copy; 2025 SuryaDev. All rights reserved.<br>
+                    <small>Unauthorized copying, reproduction, or distribution is strictly prohibited.</small>
+                </div>
             </div>
         </div>
     </div>
